# BehaviorTree-Cpp-Gazebo-Simulation-ROS2

./: README .md  README.md
test_ws/test_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test_ws/test_ws/install/behavior_tree_test/lib/behavior_tree_test/: groot_nav2_bridge
test_ws/test_ws/install/behavior_tree_test/share/behavior_tree_test/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
test_ws/test_ws/install/nav2_mobile_robot/share/nav2_mobile_robot/: map.pgm  nav2_mobile_robot.xacro  odom_plugin.xacro  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  slam.launch.py  slam.yaml
test_ws/test_ws/install/turtle_control_pkg/lib/turtle_control_pkg/: turtle_control
test_ws/test_ws/install/turtle_control_pkg/share/turtle_control_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
test_ws/test_ws/install/turtle_control_pkg/share/turtle_control_pkg/config/: behavior.xml
test_ws/test_ws/log/: latest_build
test_ws/test_ws/src/behavior_test/: CMakeLists.txt  package.xml
test_ws/test_ws/src/behavior_test/include/behavior_test/: GO_TO_TARGET.cpp
test_ws/test_ws/src/behavior_test/src/: behavior.cpp  behavior.hpp
test_ws/test_ws/src/behavior_tree_test/include/: goto_pose.hpp
test_ws/test_ws/src/turtle_control_pkg/: CMakeLists.txt  package.xml
test_ws/test_ws/src/turtle_control_pkg/include/turtle_control_pkg/: bt_control.hpp
test_ws/test_ws/src/turtle_control_pkg/src/: turtle_control.cpp
(+3 files in other folders)
